Fixed business name layering and lowercase and

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>B&M Mobile Welding</title>
+    <title>B and M Mobile Welding</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="pimg1">
       <div class="ptext">
-        <span class="border"> B&M Mobile Welding </span>
+        <span class="border"> B <span id="and"> and </span> M <br /> Mobile Welding </span>
       </div>
     </div>
 
