Logo draft and Call Now

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
   <body>
     <div class="pimg1">
       <div class="ptext">
-        <span class="border"> B <span id="and"> and </span> M <br /> Mobile Welding </span>
+        <span class="border"> 
+          <span id="bm"> B </span> 
+          <span id="and"> and </span> 
+          <span id="bm">M</span> 
+          <br /> 
+          <img src="./img/klipartz.png" alt="Welding">
+          <br />
+          Mobile Welding 
+          <br /> 
+          <a href="tel:989-413-6313">(989)413-6313</a>
+          <br />
+          <span id="vet">Veteran Owned</span>
+        </span>
       </div>
     </div>
 
@@ -33,7 +45,7 @@
 
     <div class="pimg2">
         <div class="ptext">
-          <span class="border trans"> Projects </span>
+          <span class="border reverse"> Projects </span>
         </div>
       </div>
 
@@ -53,7 +65,7 @@
 
       <div class="pimg3">
         <div class="ptext">
-          <span class="border trans"> About </span>
+          <span class="border"> About </span>
         </div>
       </div>
 
@@ -73,7 +85,11 @@
 
       <div class="pimg1">
         <div class="ptext">
-          <span class="border"> Contact </span>
+          <span class="border reverse"> 
+            Call Now 
+            <br />
+            <a id="aReverse" href="tel:989-413-6313">(989)413-6313</a>
+          </span>
         </div>
       </div>
   </body>
